# openapi.json
@@ -18,7 +18,7 @@
     "/definition": {
       "post": {
         "tags": [
-          "crate::handlers"
+          "symbol"
         ],
         "summary": "Get the definition of a symbol at a specific position in a file",
         "description": "Get the definition of a symbol at a specific position in a file\n\nReturns the location of the definition for the symbol at the given position.\n\nThe input position should point inside the symbol's identifier, e.g.\n\nThe returned position points to the identifier of the symbol, and the file_path from workspace root\n\ne.g. for the definition of `User` on line 5 of `src/main.py` with the code:\n```\n0: class User:\noutput___^\n1:     def __init__(self, name, age):\n2:         self.name = name\n3:         self.age = age\n4:\n5: user = User(\"John\", 30)\ninput_____^^^^\n```",
@@ -104,7 +104,7 @@
     "/references": {
       "post": {
         "tags": [
-          "crate::handlers"
+          "symbol"
         ],
         "summary": "Find all references to a symbol",
         "description": "Find all references to a symbol\n\nThe input position should point to the identifier of the symbol you want to get the references for.\n\nReturns a list of locations where the symbol at the given position is referenced.\n\nThe returned positions point to the start of the reference identifier.\n\ne.g. for `User` on line 0 of `src/main.py`:\n```\n0: class User:\ninput____^^^^\n1:     def __init__(self, name, age):\n2:         self.name = name\n3:         self.age = age\n4:\n5: user = User(\"John\", 30)\noutput____^\n```",
